log
Sun 08 Oct 2023 03:25:57 AM UTC: 
 tests:  0|5
total_score: 0/70
fa6f961
Sun 08 Oct 2023 03:13:58 PM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:3: error: unknown type name ‘bool’
   47 |   bool used[10];
      |   ^~~~
sudoku.c:50:18: error: ‘false’ undeclared (first use in this function); did you mean ‘fclose’?
   50 |     memset(used, false, sizeof(used));
      |                  ^~~~~
      |                  fclose
sudoku.c:50:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:56:19: error: ‘true’ undeclared (first use in this function)
   56 |       used[num] = true;
      |                   ^~~~
Compilation failed
6bf8eb5
Sun 08 Oct 2023 03:44:40 PM UTC: 
 sudoku.c | 21 +++++++++++++--------
 1 file changed, 13 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
5959a49
Sun 08 Oct 2023 03:52:53 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:99:33: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   99 |       pushBack(list, adj_node); lista
      |                                 ^~~~~
      |                                 list
sudoku.c:99:33: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:99:38: error: expected ‘;’ before ‘}’ token
   99 |       pushBack(list, adj_node); lista
      |                                      ^
      |                                      ;
  100 |         }
      |         ~                             
test.c: In function ‘adj_test1’:
test.c:62:17: error: too few arguments to function ‘get_adj_nodes’
   62 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
In file included from test.c:5:
sudoku.c:91:7: note: declared here
   91 | List* get_adj_nodes(Node* n, int row, int col) {
      |       ^~~~~~~~~~~~~
test.c:95:11: error: too few arguments to function ‘get_adj_nodes’
   95 |     adj = get_adj_nodes(initial);
      |           ^~~~~~~~~~~~~
In file included from test.c:5:
sudoku.c:91:7: note: declared here
   91 | List* get_adj_nodes(Node* n, int row, int col) {
      |       ^~~~~~~~~~~~~
test.c: In function ‘test_mod_adj’:
test.c:155:17: error: too few arguments to function ‘get_adj_nodes’
  155 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
In file included from test.c:5:
sudoku.c:91:7: note: declared here
   91 | List* get_adj_nodes(Node* n, int row, int col) {
      |       ^~~~~~~~~~~~~
Compilation failed
a31911c
Sun 08 Oct 2023 03:58:28 PM UTC: 
 sudoku.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
649dbc9
Sun 08 Oct 2023 04:03:19 PM UTC: 
 sudoku.c | 28 ++--------------------------
 1 file changed, 2 insertions(+), 26 deletions(-)
 tests:  2|4
total_score: 15/70
73d8dd7
Sun 08 Oct 2023 04:27:41 PM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
78c6089
Sun 08 Oct 2023 04:29:25 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  3|3
total_score: 25/70
601371a
Sun 08 Oct 2023 04:31:03 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++----------------------
 1 file changed, 21 insertions(+), 22 deletions(-)
 tests:  3|3
total_score: 25/70
4cfadc3
Sun 08 Oct 2023 04:32:17 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:87:23: error: implicit declaration of function ‘get_adj_nodes’ [-Werror=implicit-function-declaration]
   87 |     List* adj_nodes = get_adj_nodes(n);
      |                       ^~~~~~~~~~~~~
sudoku.c:87:23: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c: At top level:
sudoku.c:101:7: error: conflicting types for ‘get_adj_nodes’
  101 | List* get_adj_nodes(Node* n) {
      |       ^~~~~~~~~~~~~
sudoku.c:87:23: note: previous implicit declaration of ‘get_adj_nodes’ was here
   87 |     List* adj_nodes = get_adj_nodes(n);
      |                       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
88b85ea
Sun 08 Oct 2023 04:34:30 PM UTC: 
 sudoku.c | 64 +++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 33 insertions(+), 31 deletions(-)
 tests:  3|3
total_score: 25/70
03ef28c
Sun 08 Oct 2023 04:35:21 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
755509c
